C#_Framework/MyMachineControl_Toolkits/HTM_Bsp_Lib_4.06/Example/CVI/HTM_Bsp_Lib/HTM_Bsp_Lib.h

HTM_API I32 HTM_MoveOver(I32 axisIdx, F64 pos_in_unit, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_MoveOver2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_MoveOver3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_MoveOver4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_MoveOverN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_ASMoveOver (I32 axis, F64 pos, F64 vel_ratio);
HTM_API I32 HTM_ASMoveOver2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio);
HTM_API I32 HTM_ASMoveOver3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio);
HTM_API I32 HTM_ASMoveOver4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio);
HTM_API I32 HTM_ASMoveOverN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio);
HTM_API I32 HTM_ATMoveOver (I32 axis, F64 pos, F64 vel_ratio);
HTM_API I32 HTM_ATMoveOver2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio);
HTM_API I32 HTM_ATMoveOver3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio) ;
HTM_API I32 HTM_ATMoveOver4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio);
HTM_API I32 HTM_ATMoveOverN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio);
HTM_API I32 HTM_RSMoveOver (I32 axis, F64 pos, F64 vel_ratio);
HTM_API I32 HTM_RSMoveOver2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio);
HTM_API I32 HTM_RSMoveOver3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio);
HTM_API I32 HTM_RSMoveOver4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio);
HTM_API I32 HTM_RSMoveOverN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio);
HTM_API I32 HTM_RTMoveOver (I32 axis, F64 pos, F64 vel_ratio);
HTM_API I32 HTM_RTMoveOver2 (I32 axis1, I32 axis2, F64 pos1, F64 pos2, F64 vel_ratio);
HTM_API I32 HTM_RTMoveOver3 (I32 axis1, I32 axis2, I32 axis3, F64 pos1, F64 pos2, F64 pos3, F64 vel_ratio);
HTM_API I32 HTM_RTMoveOver4 (I32 axis1, I32 axis2, I32 axis3, I32 axis4, F64 pos1, F64 pos2, F64 pos3, F64 pos4, F64 vel_ratio);
HTM_API I32 HTM_RTMoveOverN (I32 axisList[], F64 posList[], I32 axisNum, F64 vel_ratio);
/*-------------two axes linear interpolation motion functions-------------*/
HTM_API I32 HTM_LineEx(I32 axisList[], I32 axisNum, F64 posList[], F64 vel_ratio, I32 mode, const HTM_MovePara *mp);
HTM_API I32 HTM_Line(I32 axisList[], I32 axisNum, F64 posList[], F64 vel_ratio, I32 mode);
HTM_API I32 HTM_Arc2_CeEx(I32 axisIdx1, I32 axisIdx2, F64 center1, F64 center2, F64 pos1, F64 pos2, I32 direction, F64 vel_ratio, I32 mode, const HTM_MovePara *mp);
HTM_API I32 HTM_Arc2_Ce(I32 axisIdx1, I32 axisIdx2, F64 center1, F64 center2, F64 pos1, F64 pos2, I32 direction, F64 vel_ratio, I32 mode);
HTM_API I32 HTM_Arc2_CaEx(I32 axisIdx1, I32 axisIdx2, F64 center1, F64 center2, F64 angle, F64 vel_ratio, I32 mode, const HTM_MovePara *mp);
HTM_API I32 HTM_Arc2_Ca(I32 axisIdx1, I32 axisIdx2, F64 center1, F64 center2, F64 angle, F64 vel_ratio, I32 mode);
/*---------------single axis speed move functions-------------------------*/
HTM_API I32 HTM_SpeedEx(I32 axisIdx, F64 vel_ratio, const HTM_MovePara *mp);
HTM_API I32 HTM_Speed(I32 axisIdx, F64 vel_ratio);
/*---------------single axis stop motion functions------------------------*/
HTM_API I32 HTM_Stop(I32 axisIdx, I32 mode);
HTM_API I32 HTM_DStop(I32 axisIdx);
HTM_API I32 HTM_EStop(I32 axisIdx);
/*---------------clear axis alarm functions-------------------------------*/
HTM_API I32 HTM_ClearAlarm(I32 axisIdx);
/*---------------axis motion done functions-------------------------------*/
HTM_API I32 HTM_HomeDone (I32 axisIdx);
HTM_API I32 HTM_HomeDone2(I32 axis1, I32 axis2);
HTM_API I32 HTM_HomeDone3(I32 axis1, I32 axis2, I32 axis3);
HTM_API I32 HTM_HomeDone4(I32 axis1, I32 axis2, I32 axis3, I32 axis4);
HTM_API I32 HTM_HomeDoneN(I32 axisList[], I32 axisNum);
HTM_API I32 HTM_OnceDone (I32 axisIdx);
HTM_API I32 HTM_TQDone(I32 axisIdx);
HTM_API I32 HTM_Done (I32 axisIdx);
 
HTM_API I32 HTM_Done2 (I32 axisIdx1, I32 axisIdx2);
HTM_API I32 HTM_Done3 (I32 axisIdx1, I32 axisIdx2, I32 axisIdx3);
HTM_API I32 HTM_Done4 (I32 axisIdx1, I32 axisIdx2, I32 axisIdx3, I32 axisIdx4);
HTM_API I32 HTM_DoneN(I32 axisList[], I32 axisNum);
/*--------------------get motion err code---------------------------------*/
HTM_API char *HTM_GetErr(I32 axisIdx, I32 errNo);
/* IO operation APIs */
HTM_API I32 HTM_LoadIoInfo(I32 ioIdx);
HTM_API I32 HTM_SaveIoInfo(I32 ioIdx);
HTM_API I32 HTM_ConfigIoInfo(I32 ioIdx);
HTM_API char* HTM_GetIoName(I32 ioIdx);
	/* 兼容版本<=3.15的接口，建议使用新版接口*/
	HTM_LEGACY I32 HTM_GetIoStatus(I32 ioIdx);
	HTM_LEGACY I32 HTM_SetBit(I32 ioIdx, I32 value);
	HTM_LEGACY I32 HTM_GetBit(I32 ioIdx);
	HTM_LEGACY I32 HTM_CheckIO(I32 ioIdx, F64 timeout);
	HTM_LEGACY I32 HTM_CheckIO2(I32 ioIdx1, I32 ioIdx2, F64 timeout);
	HTM_LEGACY I32 HTM_CheckIO3(I32 ioIdx1, I32 ioIdx2, I32 ioIdx3, F64 timeout);
	HTM_LEGACY I32 HTM_CheckIO4(I32 ioIdx1, I32 ioIdx2, I32 ioIdx3, I32 ioIdx4, F64 timeout);
	HTM_LEGACY I32 HTM_CheckION(I32 ioList[], I32 io_num, F64 timeout);
	HTM_LEGACY I32 HTM_CheckIOff(I32 ioIdx, F64 timeout);
	HTM_LEGACY I32 HTM_CheckIOff2(I32 ioIdx1, I32 ioIdx2, F64 timeout);
	HTM_LEGACY I32 HTM_CheckIOff3(I32 ioIdx1, I32 ioIdx2, I32 ioIdx3, F64 timeout);
	HTM_LEGACY I32 HTM_CheckIOff4(I32 ioIdx1, I32 ioIdx2, I32 ioIdx3, I32 ioIdx4, F64 timeout);
	HTM_LEGACY I32 HTM_CheckIOffN(I32 ioList[], I32 io_num, F64 timeout);