C#Winform/MyMachineControl_Toolkits/HTM_interface/HTM_interface/HTM_Bsp_Lib.cs


        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MoveOver(Int32 axisIdx, Double pos_in_unit, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MoveOver2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MoveOver3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MoveOver4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MoveOverN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMoveOver(Int32 axisIdx, Double pos_in_unit, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMoveOver2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMoveOver3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMoveOver4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ASMoveOverN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMoveOver(Int32 axisIdx, Double pos_in_unit, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMoveOver2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMoveOver3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMoveOver4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ATMoveOverN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMoveOver(Int32 axisIdx, Double pos_in_unit, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMoveOver2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMoveOver3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMoveOver4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RSMoveOverN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMoveOver(Int32 axisIdx, Double pos_in_unit, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMoveOver2(Int32 axis1, Int32 axis2, Double pos1, Double pos2, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMoveOver3(Int32 axis1, Int32 axis2, Int32 axis3, Double pos1, Double pos2, Double pos3, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMoveOver4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4, Double pos1, Double pos2, Double pos3, Double pos4, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_RTMoveOverN(Int32[] axisList, Double[] posList, Int32 axisNum, Double vel_ratio);

        /* Two axes linear interpolation motion functions */
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_LineEx(Int32[] axisList, Int32 axisNum, Double[] posList, Double vel_ratio, Int32 mode, ref MOTION_PARA mp);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Arc2_CeEx(Int32 axisIdx1, Int32 axisIdx2, Double center1, Double center2, Double pos1, Double pos2, Int32 direction, Double vel_ratio, Int32 mode, ref MOTION_PARA mp);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Arc2_CaEx(Int32 axisIdx1, Int32 axisIdx2, Double center1, Double center2, Double angle, Double vel_ratio, Int32 mode, ref MOTION_PARA mp);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Line(Int32[] axisList, Int32 axisNum, Double[] posList, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Arc2_Ce(Int32 axisIdx1, Int32 axisIdx2, Double center1, Double center2, Double pos1, Double pos2, Int32 direction, Double vel_ratio, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Arc2_Ca(Int32 axisIdx1, Int32 axisIdx2, Double center1, Double center2, Double angle, Double vel_ratio, Int32 mode);

        /* Single axis speed move functions */
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Speed(Int32 axisIdx, Double vel_ratio);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SpeedEx(Int32 axisIdx, Double vel_ratio, ref MOTION_PARA mp);

        /* Single axis stop motion functions */
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Stop(Int32 axisIdx, Int32 mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_DStop(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_EStop(Int32 axisIdx);

        /* Clear axis alarm functions */
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ClearAlarm(Int32 axisIdx);

        /* axis motion done functions */
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeDone(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeDone2(Int32 axis1, Int32 axis2);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeDone3(Int32 axis1, Int32 axis2, Int32 axis3);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeDone4(Int32 axis1, Int32 axis2, Int32 axis3, Int32 axis4);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_HomeDoneN(Int32[] axisList, Int32 axisNum);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_TQDone(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_OnceDone(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Done(Int32 axisIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Done2(Int32 axisIdx1, Int32 axisIdx2);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Done3(Int32 axisIdx1, Int32 axisIdx2, Int32 axisIdx3);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Done4(Int32 axisIdx1, Int32 axisIdx2, Int32 axisIdx3, Int32 axisIdx4);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_DoneN(Int32[] axisIdx, Int32 num);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_GetErr(Int32 axisIdx, Int32 errNo);
        #endregion

        #region  IO operation APIs
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_InitIoInfo(String file, UInt16 ioNum, Byte offline_mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern void HTM_DiscardIoInfo();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_LoadIoInfo(Int32 ioIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SaveIoInfo(Int32 ioIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ConfigIoInfo(Int32 ioIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetIoStatus(Int32 ioIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_GetIoName(Int32 ioIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetIoInfo(Int32 ioIdx, out IO_INFO io);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetIoInfo(Int32 ioIdx, ref IO_INFO io);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetBit(Int32 ioIdx, Int32 value);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetBit(Int32 ioIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckION(Int32[] ioList, Int32 io_num, Double timeout);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckIO(Int32 ioIdx, Double timeout);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckIO2(Int32 ioIdx1, Int32 ioIdx2, Double timeout);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckIO3(Int32 ioIdx1, Int32 ioIdx2, Int32 ioIdx3, Double timeout);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckIO4(Int32 ioIdx1, Int32 ioIdx2, Int32 ioIdx3, Int32 ioIdx4, Double timeout);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckIOffN(Int32[] ioList, Int32 io_num, Double timeout);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckIOff(Int32 ioIdx, Double timeout);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckIOff2(Int32 ioIdx1, Int32 ioIdx2, Double timeout);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckIOff3(Int32 ioIdx1, Int32 ioIdx2, Int32 ioIdx3, Double timeout);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CheckIOff4(Int32 ioIdx1, Int32 ioIdx2, Int32 ioIdx3, Int32 ioIdx4, Double timeout);
        #endregion
